# projet_cpp

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp  node.cpp  node.h  plan.cpp  plan.h  pos.cpp  pos.h  proj_class.cpp  tree.cpp  tree.h  triangle.cpp  triangle.h
